--- a/backend/package.json
+++ b/backend/package.json
@@ -4,16 +4,25 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"dev": "ts-node-dev src/server.ts"
+		"dev": "ts-node-dev src/app.ts"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"express": "^4.19.2"
+		"dotenv": "^16.4.5",
+		"express": "^4.19.2",
+		"express-async-errors": "^3.1.1",
+		"node-cron": "^3.0.3",
+		"nodemailer": "^6.9.14",
+		"pg": "^8.12.0",
+		"uuid": "^10.0.0"
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.21",
+		"@types/nodemailer": "^6.4.15",
+		"@types/pg": "^8.11.6",
+		"@types/uuid": "^10.0.0",
 		"ts-node-dev": "^2.0.0",
 		"typescript": "^5.5.4"
 	}
