--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.21",
+		"@types/node-cron": "^3.0.11",
 		"@types/nodemailer": "^6.4.15",
 		"@types/pg": "^8.11.6",
 		"@types/uuid": "^10.0.0",
