--- a/backend/package.json
+++ b/backend/package.json
@@ -10,15 +10,19 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@prisma/client": "^6.1.0",
+		"bcryptjs": "^2.4.3",
 		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
 		"express-async-errors": "^3.1.1",
 		"node-cron": "^3.0.3",
 		"nodemailer": "^6.9.14",
 		"pg": "^8.12.0",
+		"prisma": "^6.1.0",
 		"uuid": "^10.0.0"
 	},
 	"devDependencies": {
+		"@types/bcryptjs": "^2.4.6",
 		"@types/express": "^4.17.21",
 		"@types/node-cron": "^3.0.11",
 		"@types/nodemailer": "^6.4.15",
