--- a/backend/package.json
+++ b/backend/package.json
@@ -12,9 +12,10 @@
 	"dependencies": {
 		"@prisma/client": "^6.1.0",
 		"bcryptjs": "^2.4.3",
-		"dotenv": "^16.4.5",
+		"dotenv": "^16.4.7",
 		"express": "^4.19.2",
 		"express-async-errors": "^3.1.1",
+		"jsonwebtoken": "^9.0.2",
 		"node-cron": "^3.0.3",
 		"nodemailer": "^6.9.14",
 		"pg": "^8.12.0",
@@ -24,6 +25,7 @@
 	"devDependencies": {
 		"@types/bcryptjs": "^2.4.6",
 		"@types/express": "^4.17.21",
+		"@types/jsonwebtoken": "^9.0.7",
 		"@types/node-cron": "^3.0.11",
 		"@types/nodemailer": "^6.4.15",
 		"@types/pg": "^8.11.6",
