--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
 	"dependencies": {
 		"@prisma/client": "^6.1.0",
 		"bcryptjs": "^2.4.3",
+		"cors": "^2.8.5",
 		"dotenv": "^16.4.7",
 		"express": "^4.19.2",
 		"express-async-errors": "^3.1.1",
@@ -20,10 +21,13 @@
 		"nodemailer": "^6.9.14",
 		"pg": "^8.12.0",
 		"prisma": "^6.1.0",
-		"uuid": "^10.0.0"
+		"uuid": "^10.0.0",
+		"web3": "^4.16.0",
+		"web3-validator": "^2.0.6"
 	},
 	"devDependencies": {
 		"@types/bcryptjs": "^2.4.6",
+		"@types/cors": "^2.8.17",
 		"@types/express": "^4.17.21",
 		"@types/jsonwebtoken": "^9.0.7",
 		"@types/node-cron": "^3.0.11",
